--- a/restaurant_Page.html
+++ b/restaurant_Page.html
@@ -7,11 +7,11 @@
     <title>Document</title>
     
     <!-- bootstrap -->
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <!-- fontAwesome -->
-    <link rel="stylesheet" href="fontawesome-free-5.15.4-web/css/all.min.css">
-    <!-- mainStyle -->
-    <link rel="stylesheet" href="app.css">
+    <link rel="stylesheet" href="./nav_footer/css/bootstrap.min.css">
+    <!-- fontawesome -->
+    <link rel="stylesheet" href="./nav_footer/fontawesome-free-5.15.4-web/css/fontawesome.min.css">
+    <!-- mainstyle -->
+    <link rel="stylesheet" href="./nav_footer/css/style.css">
     <!-- RWD -->
     <link rel="stylesheet" href="css/responsive.css">
 
