--- a/footer.html
+++ b/footer.html
@@ -8,11 +8,11 @@
     <title>index</title>
 
     <!-- bootstrap -->
-    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="./nav_footer/css/bootstrap.min.css">
     <!-- fontawesome -->
-    <link rel="stylesheet" href="fontawesome-free-5.15.4-web/css/all.min.css">
+    <link rel="stylesheet" href="./nav_footer/fontawesome-free-5.15.4-web/css/fontawesome.min.css">
     <!-- mainstyle -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="./nav_footer/css/style.css">
     <!-- RWD -->
     <link rel="stylesheet" href="css/responsive.css">
 
