--- a/header.html
+++ b/header.html
@@ -8,13 +8,11 @@
     <title>index</title>
 
     <!-- bootstrap -->
-    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="./nav_footer/css/bootstrap.min.css">
     <!-- fontawesome -->
-    <link rel="stylesheet" href="fontawesome-free-5.15.4-web/css/all.min.css">
+    <link rel="stylesheet" href="./nav_footer/fontawesome-free-5.15.4-web/css/fontawesome.min.css">
     <!-- mainstyle -->
-    <link rel="stylesheet" href="css/style.css">
-    <!-- RWD -->
-    <link rel="stylesheet" href="css/responsive.css">
+    <link rel="stylesheet" href="./nav_footer/css/style.css">
 
     <script src="js/jquery.min.js"></script>
     <script src="js/popper.min.js"></script>
@@ -24,7 +22,7 @@
     <!-- 導覽列 start -->
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="#"><img src="img/logo.png" alt="LOGO"></a>
+            <a class="navbar-brand" href="#"><img src="./nav_footer/img/logo.png" alt="LOGO"></a>
             <div class="nav_icon">
                 <a class="nav_a" href="#"><i class="fas fa-store"></i>餐廳列表</a>
                 <a class="nav_a" href="#"><i class="fas fa-shopping-cart"></i>購物車</a>
