--- a/restaurant backstage/nav_footer/restaurant_aside.html
+++ b/restaurant backstage/nav_footer/restaurant_aside.html
@@ -57,7 +57,7 @@
                 </div>
                 <div id="collapseOne" class="panel-collapse collapse in">
                     <div class="little_title">
-                        <a data-parent="#accordion" href="#collapseOne">歷史訂位紀錄</a>
+                        <a data-parent="#accordion" href="./restaurant_booking_manage.html">歷史訂位紀錄</a>
                     </div>
                 </div>
             </div>
@@ -74,7 +74,7 @@
                 </div>
                 <div id="collapseTwo" class="panel-collapse collapse in">
                     <div class="little_title">
-                        <a data-parent="#accordion" href="#collapseOne">歷史訂餐紀錄</a>
+                        <a data-parent="#accordion" href="#">歷史訂餐紀錄</a>
                     </div>
                 </div>
             </div>
