--- a/index_list/list.html
+++ b/index_list/list.html
@@ -25,7 +25,7 @@
     <!-- 導覽列 start -->
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="#"><img src="img/logo.png" alt="LOGO"></a>
+            <a class="navbar-brand" href="index.html"><img src="img/logo.png" alt="LOGO"></a>
             <div class="nav_icon">
                 <a class="nav_a" href="#"><i class="fas fa-store"></i>餐廳列表</a>
                 <a class="nav_a" href="#"><i class="fas fa-shopping-cart"></i>購物車</a>
@@ -45,8 +45,7 @@
     <section id="search_list">
         <div class="container">
             <div class="row">
-                <div class="col-md-1"></div>
-                <div class="col-md-11">
+                <div class="col-md-12 container_list">
                     <form action="" method="">
                         <div class="search_div">
                             <input class="search_keyword" id="keyword" type="text" placeholder="請輸入餐廳關鍵字">
@@ -305,8 +304,8 @@
             </a>
           </li>
           <li class="page-item"><a class="page-link" href="#">1</a></li>
-          <li class="page-item"><a class="page-link" href="#">2</a></li>
-          <li class="page-item"><a class="page-link" href="#">3</a></li>
+          <!-- <li class="page-item"><a class="page-link" href="#">2</a></li>
+          <li class="page-item"><a class="page-link" href="#">3</a></li> -->
           <li class="page-item">
             <a class="page-link" href="#" aria-label="Next">
               <span aria-hidden="true">&raquo;</span>
