--- a/index_list/booking_reservation_page.html
+++ b/index_list/booking_reservation_page.html
@@ -14,7 +14,7 @@
     <!-- mainStyle -->
     <link rel="stylesheet" href="css/restaurant_style.css">
     <!-- RWD -->
-    <link rel="stylesheet" href="css/responsive.css">
+    <link rel="stylesheet" href="css/style.css">
 
     <script src="js/jquery.min.js"></script>
     <script src="js/popper.min.js"></script>
