--- a/index_list/editmember.html
+++ b/index_list/editmember.html
@@ -90,12 +90,14 @@
                     <label for="tel">電　　話:</label>
                     <input type="text" class="form-control" id="tel" value="0900-xxxxxx" name="tel" required>
                 </div>
-                <button type="button" onclick="confirm()" class="member_confirm_btn">
-                    返回
-                </button>
-                <button type="button" onclick="confirm()" class="member_confirm_btn">
-                    確定修改
-                </button>
+                <div>
+                    <button type="button" onclick="confirm()" class="member_back_btn">
+                        返回
+                    </button>
+                    <button type="button" onclick="confirm()" class="member_confirm_btn">
+                        確定修改
+                    </button>
+                </div>
             </form>
         </div>
     </section>
