--- a/index_list/login.html
+++ b/index_list/login.html
@@ -15,9 +15,6 @@
     <link rel="stylesheet" href="css/login.css">
     <!-- mainstyle -->
     <link rel="stylesheet" href="css/style.css">
-    <!-- RWD -->
-    <link rel="stylesheet" href="css/responsive.css">
-
 
     <script src="js/jquery.min.js"></script>
     <script src="js/popper.min.js"></script>
@@ -39,12 +36,11 @@
                 </div>
                 <div class="account_home_login">
                     <label for="email">帳&nbsp&nbsp&nbsp&nbsp&nbsp號&nbsp&nbsp&nbsp</label>
-                    <input type="email" id="email" style="border-radius: 5px; width: 200px;border-color: whitesmoke;">
+                    <input type="email" id="email">
                     <br>
                     <br>
                     <label for="password">密&nbsp&nbsp&nbsp&nbsp&nbsp碼&nbsp&nbsp&nbsp</label>
-                    <input type="password" id="password"
-                        style="border-radius: 5px;width: 200px;border-color: whitesmoke">
+                    <input type="password" id="password">
                 </div>
 
                 <div class="btn_home_forgetpwd">
@@ -56,7 +52,7 @@
                 </div>
 
                 <div class="btn_home_login ">
-                    <button class="btn btn-dark ">登入</button>
+                    <button class="login_btn">登入</button>
                 </div>
 
             </div>
