--- a/index_list/restaurant_aside.html
+++ b/index_list/restaurant_aside.html
@@ -23,26 +23,12 @@
 
 <body>
     <!-- 導覽列 start -->
-    <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="#"><img src="img/logo.png" alt="LOGO"></a>
-            <div class="nav_icon">
-                <a class="nav_a" href="#"><i class="fas fa-store"></i>餐廳列表</a>
-                <a class="nav_a" href="#"><i class="fas fa-shopping-cart"></i>購物車</a>
-                <a class="nav_a" href="#"><i class="fas fa-user-circle"></i>會員登入</a>
-            </div>
-            <div class="rwd_icon">
-                <a class="nav_a" href="#"><i class="fas fa-store"></i></a>
-                <a class="nav_a" href="#"><i class="fas fa-shopping-cart"></i></a>
-                <a class="nav_a" href="#"><i class="fas fa-user-circle"></i></a>
-            </div>
-        </nav>
-    </header>
-    <!-- 導覽列 end -->
-
+    
+    <div class="header_page"></div>
+    
+    <!-- 導覽列 over -->
 
     <aside>
-
         <div class="panel-group" id="accordion">
             <div class="panel panel-default">
                 <div class="panel-heading">
@@ -115,29 +101,17 @@
                             </div>
                         </div>
                     </form>
-
                 </div>
             </div>
         </div>
-
     </aside>
 
-
-
-
-    <!-- 頁尾 start -->
-    <footer>
-        <div class="footer_link">
-            <a href="#">關於我們</a>
-            <a href="#">商家入口</a>
-            <a href="#">常見問題</a>
-            <a href="#">聯絡我們</a>
-        </div>
-        <div class="footer_text">
-            <p>Copyright &copy; 2022 FoodCrossesRoads.All Rights Reserved.</p>
-        </div>
-    </footer>
-    <!-- 頁尾 end -->
+    <script>
+        $(document).ready(function() {
+            $(".header_page").load("header.html");
+            $(".footer_page").load("footer.html");
+        });
+    </script>
 </body>
 
 </html>
