--- a/index_list/restaurant_booking_manage.html
+++ b/index_list/restaurant_booking_manage.html
@@ -22,27 +22,13 @@
 </head>
 
 <body>
-  <!-- 導覽列 start -->
-  <header>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#"><img src="img/logo.png" alt="LOGO"></a>
-      <div class="nav_icon">
-        <a class="nav_a" href="#"><i class="fas fa-store"></i>餐廳列表</a>
-        <a class="nav_a" href="#"><i class="fas fa-shopping-cart"></i>購物車</a>
-        <a class="nav_a" href="#"><i class="fas fa-user-circle"></i>會員登入</a>
-      </div>
-      <div class="rwd_icon">
-        <a class="nav_a" href="#"><i class="fas fa-store"></i></a>
-        <a class="nav_a" href="#"><i class="fas fa-shopping-cart"></i></a>
-        <a class="nav_a" href="#"><i class="fas fa-user-circle"></i></a>
-      </div>
-    </nav>
-  </header>
-  <!-- 導覽列 end -->
+      <!-- 導覽列 start -->
 
+      <div class="header_page"></div>
+
+      <!-- 導覽列 over -->
 
   <aside>
-
     <div class="panel-group" id="accordion">
       <div class="panel panel-default">
         <div class="panel-heading">
@@ -113,11 +99,10 @@
         </div>
       </div>
     </div>
-
   </aside>
 
   <div class="container">
-    <table class="table">
+    <table class="table order_table">
       <thead>
         <tr>
           <th>狀態</th>
@@ -145,10 +130,6 @@
             </button>
           </td>
         </tr>
-
-
-
-
 
         <tr>
           <td>取消</td>
@@ -219,8 +200,6 @@
                   <div class="full_star">★★★★★</div>
                 </div>
 
-
-
               </div>
 
               <!-- Modal footer -->
@@ -232,25 +211,22 @@
             </div>
           </div>
         </div>
-
       </tbody>
     </table>
   </div>
 
+    <!-- 頁尾 start -->
 
-  <!-- 頁尾 start -->
-  <footer>
-    <div class="footer_link">
-      <a href="#">關於我們</a>
-      <a href="#">商家入口</a>
-      <a href="#">常見問題</a>
-      <a href="#">聯絡我們</a>
-    </div>
-    <div class="footer_text">
-      <p>Copyright &copy; 2022 FoodCrossesRoads.All Rights Reserved.</p>
-    </div>
-  </footer>
-  <!-- 頁尾 end -->
+    <div class="footer_page"></div>
+
+    <!-- 頁尾 over -->
+
+  <script>
+    $(document).ready(function() {
+        $(".header_page").load("header.html");
+        $(".footer_page").load("footer.html");
+    });
+</script>
 </body>
 
 </html>
