--- a/index_list/restaurant_booking_manage.html
+++ b/index_list/restaurant_booking_manage.html
@@ -14,7 +14,7 @@
   <!-- mainstyle -->
   <link rel="stylesheet" href="css/style.css">
   <!-- index -->
-  <link rel="stylesheet" href="css/restaurant_booking_manage.css">
+  <link rel="stylesheet" href="./css/restaurant_booking_manage.css">
 
   <script src="js/jquery.min.js"></script>
   <script src="js/popper.min.js"></script>
