--- a/index_list/index.html
+++ b/index_list/index.html
@@ -114,36 +114,36 @@
 
                                 <div class="chk_div dropdown_div">
                                     <div class="chk_css">
-                                        <div class="mobile_chk_item">
-                                            <input class="mobile_chk_chk" type="checkbox" name="child_seats" id="child_seats" value="2">
+                                        <div class="chk_item">
+                                            <input class="chk_chk" type="checkbox" name="child_seats" id="child_seats" value="2">
                                             <label for="child_seats">提供兒童座椅</label>
                                         </div>
-                                        <div class="mobile_chk_item">
-                                            <input class="mobile_chk_chk" type="checkbox" name="barrier_free" id="barrier_free" value="2">
+                                        <div class="chk_item">
+                                            <input class="chk_chk" type="checkbox" name="barrier_free" id="barrier_free" value="2">
                                             <label for="barrier_free">無障礙設施</label>
                                         </div>
-                                        <div class="mobile_chk_item">
-                                            <input class="mobile_chk_chk" type="checkbox" name="min_consumption" id="min_consumption" value="2">
+                                        <div class="chk_item">
+                                            <input class="chk_chk" type="checkbox" name="min_consumption" id="min_consumption" value="2">
                                             <label for="min_consumption">最低消費限制</label>
                                         </div>
-                                        <div class="mobile_chk_item">
-                                            <input class="mobile_chk_chk" type="checkbox" name="limit_meal_time" id="limit_meal_time" value="2">
+                                        <div class="chk_item">
+                                            <input class="chk_chk" type="checkbox" name="limit_meal_time" id="limit_meal_time" value="2">
                                             <label for="limit_meal_time">限制用餐時間</label>
                                         </div>
-                                        <div class="mobile_chk_item">
-                                            <input class="mobile_chk_chk" type="checkbox" name="delivery" id="delivery" value="2">
+                                        <div class="chk_item">
+                                            <input class="chk_chk" type="checkbox" name="delivery" id="delivery" value="2">
                                             <label for="delivery">提供外送</label>
                                         </div>
-                                        <div class="mobile_chk_item">
-                                            <input class="mobile_chk_chk" type="checkbox" name="service_free" id="service_free" value="2">
+                                        <div class="chk_item">
+                                            <input class="chk_chk" type="checkbox" name="service_free" id="service_free" value="2">
                                             <label for="service_free">收取服務費</label>
                                         </div>
-                                        <div class="mobile_chk_item">
-                                            <input class="mobile_chk_chk" type="checkbox" name="parking" id="parking" value="2">
+                                        <div class="chk_item">
+                                            <input class="chk_chk" type="checkbox" name="parking" id="parking" value="2">
                                             <label for="parking">附設停車場</label>
                                         </div>
-                                        <div class="mobile_chk_item">
-                                            <input class="mobile_chk_chk" type="checkbox" name="allow_pets" id="allow_pets" value="2">
+                                        <div class="chk_item">
+                                            <input class="chk_chk" type="checkbox" name="allow_pets" id="allow_pets" value="2">
                                             <label for="allow_pets">允許攜帶寵物</label>
                                         </div>
 
@@ -246,37 +246,37 @@
                             <div id="other" class="mobile_tab_div">
                                 <div class="mobile_chk_css">
                                     <div class="mobile_chk_item">
-                                        <input class="chk_chk" type="checkbox" name="child_seats" id="child_seats" value="2">
+                                        <input class="mobile_chk_chk" type="checkbox" name="child_seats" id="child_seats" value="2">
                                         <label for="child_seats">提供兒童座椅</label>
                                     </div>
                                     <div class="mobile_chk_item">
-                                        <input class="chk_chk" type="checkbox" name="barrier_free" id="barrier_free" value="2">
+                                        <input class="mobile_chk_chk" type="checkbox" name="barrier_free" id="barrier_free" value="2">
                                         <label for="barrier_free">無障礙設施</label>
                                     </div>
                                     <div class="mobile_chk_item">
-                                        <input class="chk_chk" type="checkbox" name="min_consumption" id="min_consumption" value="2">
+                                        <input class="mobile_chk_chk" type="checkbox" name="min_consumption" id="min_consumption" value="2">
                                         <label for="min_consumption">最低消費限制</label>
                                     </div>
                                     <div class="mobile_chk_item">
-                                        <input class="chk_chk" type="checkbox" name="limit_meal_time" id="limit_meal_time" value="2">
+                                        <input class="mobile_chk_chk" type="checkbox" name="limit_meal_time" id="limit_meal_time" value="2">
                                         <label for="limit_meal_time">限制用餐時間</label>
                                     </div>
                                 </div>
                                 <div class="mobile_chk_css">
                                     <div class="mobile_chk_item">
-                                        <input class="chk_chk" type="checkbox" name="delivery" id="delivery" value="2">
+                                        <input class="mobile_chk_chk" type="checkbox" name="delivery" id="delivery" value="2">
                                         <label for="delivery">提供外送</label>
                                     </div>
                                     <div class="mobile_chk_item">
-                                        <input class="chk_chk" type="checkbox" name="service_free" id="service_free" value="2">
+                                        <input class="mobile_chk_chk" type="checkbox" name="service_free" id="service_free" value="2">
                                         <label for="service_free">收取服務費</label>
                                     </div>
                                     <div class="mobile_chk_item">
-                                        <input class="chk_chk" type="checkbox" name="parking" id="parking" value="2">
+                                        <input class="mobile_chk_chk" type="checkbox" name="parking" id="parking" value="2">
                                         <label for="parking">附設停車場</label>
                                     </div>
                                     <div class="mobile_chk_item">
-                                        <input class="chk_chk" type="checkbox" name="allow_pets" id="allow_pets" value="2">
+                                        <input class="mobile_chk_chk" type="checkbox" name="allow_pets" id="allow_pets" value="2">
                                         <label for="allow_pets">允許攜帶寵物</label>
                                     </div>
                                 </div>
@@ -418,7 +418,6 @@
                 $(".area_label").html(`<i class="fas fa-map-marker-alt"></i>${text}`);
             });
         });
-
         function open_tab(tab_name) {
             var tab_div = document.getElementsByClassName("mobile_tab_div");
             for (var i = 0; i < tab_div.length; i++) {
