--- a/index_list/list.html
+++ b/index_list/list.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>index</title>
+    <title>list</title>
 
     <!-- bootstrap -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -31,7 +31,7 @@
     <section id="search_list">
         <div class="container">
             <div class="row">
-                <div class="col-md-12 container_list">
+                <div class="col-md-12">
                     <form action="" method="">
                         <div class="search_div">
                             <input class="search_keyword" id="keyword" type="text" placeholder="請輸入餐廳關鍵字">
@@ -113,22 +113,22 @@
 
                                 <div class="chk_div dropdown_div">
                                     <div class="chk_css">
-                                        <input class="chk_item" type="checkbox" name="child_seats" value="2">
-                                        <span>提供兒童座椅</span>
-                                        <input class="chk_item" type="checkbox" name="barrier_free" value="2">
-                                        <span>無障礙設施</span>
-                                        <input class="chk_item" type="checkbox" name="min_consumption" value="2">
-                                        <span>最低消費限制</span>
-                                        <input class="chk_item" type="checkbox" name="limit_meal_time" value="2">
-                                        <span>限制用餐時間</span>
-                                        <input class="chk_item" type="checkbox" name="delivery" value="2">
-                                        <span>提供外送</span>
-                                        <input class="chk_item" type="checkbox" name="service_free" value="2">
-                                        <span>收取服務費</span>
-                                        <input class="chk_item" type="checkbox" name="parking" value="2">
-                                        <span>附設停車場</span>
-                                        <input class="chk_item" type="checkbox" name="allow_pets" value="2">
-                                        <span>允許攜帶寵物</span>
+                                        <input class="chk_item" type="checkbox" id="child_seats" name="child_seats" value="2">
+                                        <label for="child_seats">提供兒童座椅</label>
+                                        <input class="chk_item" type="checkbox" id="barrier_free" name="barrier_free" value="2">
+                                        <label for="barrier_free">無障礙設施</label>
+                                        <input class="chk_item" type="checkbox" id="min_consumption" name="min_consumption" value="2">
+                                        <label for="min_consumption">最低消費限制</label>
+                                        <input class="chk_item" type="checkbox" id="limit_meal_time" name="limit_meal_time" value="2">
+                                        <label for="limit_meal_time">限制用餐時間</label>
+                                        <input class="chk_item" type="checkbox" id="service_free" name="service_free" value="2">
+                                        <label for="service_free">收取服務費</label>
+                                        <input class="chk_item" type="checkbox" id="allow_pets" name="allow_pets" value="2">
+                                        <label for="allow_pets">允許攜帶寵物</label>
+                                        <input class="chk_item" type="checkbox" id="delivery" name="delivery" value="2">
+                                        <label for="delivery">提供外送</label>
+                                        <input class="chk_item" type="checkbox" id="parking" name="parking" value="2">
+                                        <label for="parking">附設停車場</label>
                                     </div>
                                     <div class="chk_close">
                                         關閉
@@ -139,6 +139,131 @@
 
                             <div class="dropdown">
                                 <button class="search_btn">搜尋</button>
+                            </div>
+                        </div>
+                    </form>
+
+                    <form action="">
+                        <div class="search_mobile_div">
+                            <div class="search_mobile_inline_div">
+                                <i class="fas fa-search search_icon"></i>
+                                <label class="search_label">搜尋餐廳</label>
+                            </div>
+                        </div>
+                        <div class="mobile_div">
+                            <div class="mobile_inline_div">
+                                <div class="turn_off">
+                                    <i class="fas fa-times"></i>
+                                </div>
+                                <input class="search_keyword" id="keyword" type="text" placeholder="請輸入餐廳關鍵字">
+                                <div class="area_div">
+                                    <label for="area_btn" onclick="open_tab('area')" class="area_label mobile_tab_label"><i class="fas fa-map-marker-alt"></i>請選擇地區<i
+                                        class="fas fa-sort-down"></i></label>
+                                </div>
+                                <div class="other_div">
+                                    <label for="other_btn" onclick="open_tab('other')" class="other_label mobile_tab_label"><i class="fas fa-hand-point-up"></i>進階搜尋<i
+                                        class="fas fa-sort-down"></i></label>
+                                </div>
+                                <div class="dropdown">
+                                    <button class="search_btn">搜尋</button>
+                                </div>
+                            </div>
+                            <div id="area" class="mobile_tab_div">
+                                <div class="mobile_tab_css">
+                                    <!-- 北部區塊 start -->
+                                    <label class="mobile_dropdown_label">北部</label>
+                                    <div class="mobile_tab_content mobile_dropdown_div">
+                                        <span>基隆市</span>
+                                        <span>台北市</span>
+                                        <span>新北市</span>
+                                        <span>桃園市</span>
+                                        <span>新竹市</span>
+                                        <span>新竹縣</span>
+                                    </div>
+                                    <!-- 北部區塊 end -->
+                                </div>
+                                <div class="mobile_tab_css">
+                                    <!-- 中部區塊 start -->
+                                    <label class="mobile_dropdown_label">中部</label>
+                                    <div class="mobile_tab_content mobile_dropdown_div">
+                                        <span>苗栗縣</span>
+                                        <span>台中市</span>
+                                        <span>南投縣</span>
+                                        <span>彰化縣</span>
+                                        <span>雲林縣</span>
+                                    </div>
+                                    <!-- 中部區塊 end -->
+                                </div>
+                                <div class="mobile_tab_css">
+                                    <!-- 南部區塊 start -->
+                                    <label class="mobile_dropdown_label">南部</label>
+                                    <div class="mobile_tab_content mobile_dropdown_div">
+                                        <span>嘉義市</span>
+                                        <span>嘉義縣</span>
+                                        <span>台南市</span>
+                                        <span>高雄市</span>
+                                        <span>屏東縣</span>
+                                    </div>
+                                    <!-- 南部區塊 end -->
+                                </div>
+                                <div class="mobile_tab_css">
+                                    <!-- 東部區塊 start -->
+                                    <label class="mobile_dropdown_label">東部</label>
+                                    <div class="mobile_tab_content mobile_dropdown_div">
+                                        <span>宜蘭縣</span>
+                                        <span>花蓮縣</span>
+                                        <span>台東縣</span>
+                                    </div>
+                                    <!-- 東部區塊 end -->
+                                </div>
+                                <div class="mobile_tab_css">
+                                    <!-- 離島區塊 start -->
+                                    <label class="mobile_dropdown_label">離島</label>
+                                    <div class="mobile_tab_content mobile_dropdown_div">
+                                        <span>澎湖縣</span>
+                                        <span>連江縣</span>
+                                        <span>金門縣</span>
+                                    </div>
+                                    <!-- 離島區塊 end -->
+                                </div>
+                            </div>
+                            <div id="other" class="mobile_tab_div">
+                                <div class="mobile_chk_css">
+                                    <div class="mobile_chk_item">
+                                        <input class="mobile_chk_chk" type="checkbox" name="child_seats" id="child_seats" value="2">
+                                        <label for="child_seats">提供兒童座椅</label>
+                                    </div>
+                                    <div class="mobile_chk_item">
+                                        <input class="mobile_chk_chk" type="checkbox" name="barrier_free" id="barrier_free" value="2">
+                                        <label for="barrier_free">無障礙設施</label>
+                                    </div>
+                                    <div class="mobile_chk_item">
+                                        <input class="mobile_chk_chk" type="checkbox" name="min_consumption" id="min_consumption" value="2">
+                                        <label for="min_consumption">最低消費限制</label>
+                                    </div>
+                                    <div class="mobile_chk_item">
+                                        <input class="mobile_chk_chk" type="checkbox" name="limit_meal_time" id="limit_meal_time" value="2">
+                                        <label for="limit_meal_time">限制用餐時間</label>
+                                    </div>
+                                </div>
+                                <div class="mobile_chk_css">
+                                    <div class="mobile_chk_item">
+                                        <input class="mobile_chk_chk" type="checkbox" name="delivery" id="delivery" value="2">
+                                        <label for="delivery">提供外送</label>
+                                    </div>
+                                    <div class="mobile_chk_item">
+                                        <input class="mobile_chk_chk" type="checkbox" name="service_free" id="service_free" value="2">
+                                        <label for="service_free">收取服務費</label>
+                                    </div>
+                                    <div class="mobile_chk_item">
+                                        <input class="mobile_chk_chk" type="checkbox" name="parking" id="parking" value="2">
+                                        <label for="parking">附設停車場</label>
+                                    </div>
+                                    <div class="mobile_chk_item">
+                                        <input class="mobile_chk_chk" type="checkbox" name="allow_pets" id="allow_pets" value="2">
+                                        <label for="allow_pets">允許攜帶寵物</label>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </form>
@@ -243,7 +368,7 @@
             </div>
         </div>
     </section>
-    <aside id="search_aside">
+    <!-- <aside id="search_aside">
         <h5>條件篩選</h5>
         <ul>
             <li class="kind_aside">
@@ -279,7 +404,7 @@
                 <label for="port_food">港式料理</label>
             </li>
         </ul>
-    </aside>
+    </aside> -->
 
     <nav id="page_list" aria-label="Page navigation example">
         <ul class="pagination">
@@ -314,9 +439,40 @@
                 $(this).parent().find(".dropdown_div").slideToggle();
                 $(this).parent().siblings().find(".dropdown_div").slideUp();
             });
+            $(".tab_content span").click(function() {
+                var text = $(this).text();
+                $(".area_label").html(`<i class="fas fa-map-marker-alt"></i>${text}`);
+            });
+            $(".tab_close,.chk_close").click(function() {
+                $(".dropdown_div").slideUp();
+            });
+            $(".search_mobile_div").click(function() {
+                $(".mobile_div").css("display", "unset");
+            });
+            $(".turn_off").click(function() {
+                $(".mobile_div").css("display", "none");
+            });
+            $(".mobile_tab_content span").click(function() {
+                var text = $(this).text();
+                $(".area_label").html(`<i class="fas fa-map-marker-alt"></i>${text}`);
+            });
+            $(".mobile_dropdown_label").click(function(e) {
+                e.preventDefault();
+                $(this).parent().find(".mobile_dropdown_div").slideToggle();
+                $(this).parent().siblings().find(".mobile_dropdown_div").slideUp();
+            });
             $(".header_page").load("header.html");
             $(".footer_page").load("footer.html");
         });
+        
+        function open_tab(tab_name) {
+            var tab_div = document.getElementsByClassName("mobile_tab_div");
+            for (var i = 0; i < tab_div.length; i++) {
+                tab_div[i].style.display = "none";
+            }
+            document.getElementById(tab_name).style.display = "block";
+        }
+         
     </script>
 </body>
 
