--- a/index_list/editmember.html
+++ b/index_list/editmember.html
@@ -28,77 +28,110 @@
 
     <!-- 導覽列 over -->
 
-    <aside>
+    <aside class="aside_menu">
         <div class="panel-group" id="accordion">
-            <div class="panel panel-default" style="background-color: #8b1309;">
+            <div class="panel panel-default">
                 <div class="panel-heading">
                     <h4 class="panel-title"><a data-toggle="collapse" data-parent="#accordion"
-                            href="#collapseOne">會員資料</a>
+                        href="member.html">會員資料</a>
                     </h4>
                 </div>
             </div>
             <div class="panel panel-default">
                 <div class="panel-heading">
                     <h4 class="panel-title"><a data-toggle="collapse" data-parent="#accordion"
-                            href="#collapseTwo">訂位管理</a>
+                        href="booking_manage.html">訂位管理</a>
                     </h4>
                 </div>
             </div>
             <div class="panel panel-default">
                 <div class="panel-heading">
                     <h4 class="panel-title"><a data-toggle="collapse" data-parent="#accordion"
-                            href="#collapseThree">訂餐管理</a>
+                        href="order_manage.html">訂餐管理</a>
                     </h4>
                 </div>
             </div>
         </div>
     </aside>
+
+    <input type="checkbox" name="aside_menu_chk" id="aside_menu_chk">
+    <div class="mobile_aside_menu">
+        <div class="panel-group" id="accordion">
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h4 class="panel-title"><a href="member.html">會員資料</a>
+                    </h4>
+                </div>
+            </div>
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h4 class="panel-title"><a href="booking_manage.html">訂位管理</a>
+                    </h4>
+                </div>
+            </div>
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h4 class="panel-title"><a href="order_manage.html">訂餐管理</a>
+                    </h4>
+                </div>
+            </div>
+        </div>
+        <label for="aside_menu_chk">
+            <i class="fas fa-angle-right"></i>
+        </label>
+    </div>
+
     <section id="edit_member">
-        <div class="container">
-            <form class="edit_info was-validated">
-                <div>
-                    <p class="title_member_edit" style="margin-left: 40px;">會員資料修改</p>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-md-12">
+                    <form class="edit_info was-validated">
+                        <div>
+                            <p class="title_member_edit" style="margin-left: 40px;">會員資料修改</p>
+                        </div>
+                        <div class="form-group form-inline">
+                            <label for="name">姓　　名:</label>
+                            <input type="text" class="form-control" id="name" value="李曉明" name="name" required>
+                        </div>
+                        <div class="form-group form-inline">
+                            <label>性　　別:</label>
+                            <label class="form-check-label">
+                                <input type="radio" class="form-check-input" name="optradio" checked="checked">男
+                            </label>
+                            <label class="form-check-label">
+                                <input type="radio" class="form-check-input" name="optradio">女
+                            </label>
+                        </div>
+                        <div class="form-group form-inline">
+                            <label for="email">信　　箱:</label>
+                            <input type="email" class="form-control" id="email" value="email@gmail.com" name="email"
+                                disabled>
+                        </div>
+                        <div class="form-group form-inline">
+                            <label for="pwd">密　　碼:</label>
+                            <input type="password" class="form-control" id="pwd" value="******" name="pwd" required>
+                            <div class="invalid-feedback">請輸入密碼</div>
+                        </div>
+                        <div class="form-group form-inline" style="margin-left: -31px;">
+                            <label for="pwd">　　確認密碼:</label>
+                            <input type="password" class="form-control" id="pwd" value="******" name="pwd" required>
+                            <div class="invalid-feedback">請輸入密碼</div>
+                        </div>
+                        <div class="form-group form-inline">
+                            <label for="tel">電　　話:</label>
+                            <input type="text" class="form-control" id="tel" value="0900-xxxxxx" name="tel" required>
+                        </div>
+                        <div>
+                            <button type="button" onclick="confirm()" class="member_back_btn">
+                                返回
+                            </button>
+                            <button type="button" onclick="confirm()" class="member_confirm_btn">
+                                確定修改
+                            </button>
+                        </div>
+                    </form>
                 </div>
-                <div class="form-group form-inline">
-                    <label for="name">姓　　名:</label>
-                    <input type="text" class="form-control" id="name" value="李曉明" name="name" required>
-                </div>
-                <div class="form-group form-inline">
-                    <label>性　　別:</label>
-                    <label class="form-check-label">
-                        <input type="radio" class="form-check-input" name="optradio" checked="checked">男
-                    </label>
-                    <label class="form-check-label">
-                        <input type="radio" class="form-check-input" name="optradio">女
-                    </label>
-                </div>
-                <div class="form-group form-inline">
-                    <label for="email">信　　箱:</label>
-                    <input type="email" class="form-control" id="email" value="email@gmail.com" name="email" disabled>
-                </div>
-                <div class="form-group form-inline">
-                    <label for="pwd">密　　碼:</label>
-                    <input type="password" class="form-control" id="pwd" value="******" name="pwd" required>
-                    <div class="invalid-feedback">請輸入密碼</div>
-                </div>
-                <div class="form-group form-inline" style="margin-left: -31px;">
-                    <label for="pwd">　　確認密碼:</label>
-                    <input type="password" class="form-control" id="pwd" value="******" name="pwd" required>
-                    <div class="invalid-feedback">請輸入密碼</div>
-                </div>
-                <div class="form-group form-inline">
-                    <label for="tel">電　　話:</label>
-                    <input type="text" class="form-control" id="tel" value="0900-xxxxxx" name="tel" required>
-                </div>
-                <div>
-                    <button type="button" onclick="confirm()" class="member_back_btn">
-                        返回
-                    </button>
-                    <button type="button" onclick="confirm()" class="member_confirm_btn">
-                        確定修改
-                    </button>
-                </div>
-            </form>
+            </div>
         </div>
     </section>
     <!-- 頁尾 start -->
