--- a/index_list/restaurant_ today_booking.html
+++ b/index_list/restaurant_ today_booking.html
@@ -146,6 +146,62 @@
           <td>
             <div class="checkbox">
               <label>
+                <input type="checkbox" style="width: 20px; height: 20px; margin-left: 15px;">
+              </label>
+            </div>
+          </td>
+          <td>00001</td>
+          <td>2022-01-08</td>
+          <td>17:00</td>
+          <td>3</td>
+          <td>李曉明</td>
+          <td>09001993412</td>
+          <td>
+            <button class="btn btn-sm btn-dark detail_btn" data-toggle="modal" data-target="#detailModal"
+              style="margin-left: 80px">
+              詳細內容
+            </button>
+          </td>
+          <td>
+            <button class="btn btn-sm detail_btn" data-toggle="modal" data-target="#detailModal"
+              style="margin-left: -35px; border: 1px solid #403C3C;">
+              取消
+            </button>
+          </td>
+        </tr>
+
+        <tr>
+          <td>
+            <div class="checkbox">
+              <label>
+                <input type="checkbox" style="width: 20px; height: 20px; margin-left: 15px;" checked>
+              </label>
+            </div>
+          </td>
+          <td>00001</td>
+          <td>2022-01-08</td>
+          <td>17:00</td>
+          <td>3</td>
+          <td>李曉明</td>
+          <td>09001993412</td>
+          <td>
+            <button class="btn btn-sm btn-dark detail_btn" data-toggle="modal" data-target="#detailModal"
+              style="margin-left: 80px;">
+              詳細內容
+            </button>
+          </td>
+          <td>
+            <button class="btn btn-sm detail_btn cancel" data-toggle="modal" data-target="#detailModal"
+              style="margin-left: -35px; border: 1px solid #403C3C;">
+              取消
+            </button>
+          </td>
+        </tr>
+
+        <tr>
+          <td>
+            <div class="checkbox">
+              <label>
                 <input type="checkbox" style="width: 20px; height: 20px; margin-left: 15px;" checked>
               </label>
             </div>
